<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.idocv</groupId>
	<artifactId>docview_win</artifactId>
	<version>6.4.9_20160521</version>
	<packaging>war</packaging>
	<name>docview</name>
	<description>document online viewer</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.springframework.version>4.2.4.RELEASE</org.springframework.version>
		<org.eclipse.jetty.version>9.3.7.v20160115</org.eclipse.jetty.version>
	</properties>

	<dependencies>
		<!-- common jar START -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${org.springframework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.7</version>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.1</version>
		</dependency>
		<!-- common jar END -->
		
		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.0</version>
		</dependency>

		<!-- Database -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>2.12.4</version>
		</dependency>
		<!-- Database end -->
	</dependencies>

	<build>
		<!-- Set properties in resource files -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- skip test -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.1.3</version>
				<configuration>
					<skip>true</skip>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${org.eclipse.jetty.version}</version>
				<configuration>
					<scanIntervalSeconds>0</scanIntervalSeconds>
					<httpConnector>
						<port>8080</port>
						<idleTimeout>60000</idleTimeout>
					</httpConnector>
					<stopKey>docviewstopkey</stopKey>
					<stopPort>9080</stopPort>
					<jvmArgs>-Xms512M -Xmx1024M -XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
					<systemProperties>
						<systemProperty>
							<name>org.eclipse.jetty.server.Request.maxFormContentSize</name>
							<value>1000000</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>src/main/assembly/package.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- Different Environment Profiles -->
	<profiles>
		<!-- Development -->
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- Data -->
				<pom.data.url>http://127.0.0.1/data/</pom.data.url>
				<pom.data.dir>/idocv/data/</pom.data.dir>
				<pom.view.page.draw.server>http://127.0.0.1:8997</pom.view.page.draw.server>

				<!-- Restriction -->
				<pom.filetype.upload>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z,dwg,dxf,dwf</pom.filetype.upload>
				<pom.filetype.view>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z,dwg,dxf,dwf</pom.filetype.view>
				<pom.upload.max.size>100000000</pom.upload.max.size>
				<pom.upload.max.msg>\u514d\u8d39\u7248\u53ea\u652f\u6301100M\u4ee5\u5185\u6587\u4ef6\u9884\u89c8\uff0c\u8be6\u60c5\u54a8\u8be2\uff1a400-000-7644</pom.upload.max.msg>

				<!-- Database -->
				<pom.db.mongodb.ip>localhost</pom.db.mongodb.ip>
				<pom.db.mongodb.port>27017</pom.db.mongodb.port>

				<!-- Office converter -->
				<pom.converter.word2html>/idocv/converter/word2html.exe</pom.converter.word2html>
				<pom.converter.html2word>/idocv/converter/pandoc.exe</pom.converter.html2word>
				<pom.converter.word2pdf>/idocv/converter/word2pdf.exe</pom.converter.word2pdf>
				<pom.converter.excel2html>/idocv/converter/excel2html.exe</pom.converter.excel2html>
				<pom.converter.excel2pdf>/idocv/converter/excel2pdf.exe</pom.converter.excel2pdf>
				<pom.converter.ppt2jpg>/idocv/converter/ppt2jpg.exe</pom.converter.ppt2jpg>
				<pom.converter.pdf2img>/idocv/converter/pdf2img/gswin64c.exe</pom.converter.pdf2img>
				<pom.converter.pdf2html>/idocv/converter/pdf2html/pdf2htmlEX.exe</pom.converter.pdf2html>
				<pom.converter.img2jpg>C:/Program Files/ImageMagick-6.9.0-Q8/convert.exe</pom.converter.img2jpg>
				<pom.converter.audio2mp3>/idocv/converter/ffmpeg.exe</pom.converter.audio2mp3>
				<pom.converter.zip2file>/idocv/converter/zip2file/7z.exe</pom.converter.zip2file>
				<pom.converter.cad2img>/idocv/converter/cad2img/di.exe</pom.converter.cad2img>
			</properties>
		</profile>

		<!-- Test -->
		<profile>
			<id>test</id>
			<properties>
				<!-- Data -->
				<pom.data.url>http://west.idocv.com/data/</pom.data.url>
				<pom.data.dir>/idocv/data/</pom.data.dir>
				<pom.view.page.draw.server>http://draw.idocv.com:8997</pom.view.page.draw.server>

				<!-- Restriction -->
				<pom.filetype.upload>doc,docx,xls,xlsx,ppt,pptx,pdf,txt</pom.filetype.upload>
				<pom.filetype.view>doc,docx,xls,xlsx,ppt,pptx,pdf,txt</pom.filetype.view>
				<pom.upload.max.size>1000000</pom.upload.max.size>
				<pom.upload.max.msg>\u514d\u8d39\u7248\u53ea\u652f\u63011M\u4ee5\u5185\u6587\u4ef6\u9884\u89c8\uff0c\u8be6\u60c5\u54a8\u8be2\uff1a400-000-7644</pom.upload.max.msg>

				<!-- Database -->
				<pom.db.mongodb.ip>localhost</pom.db.mongodb.ip>
				<pom.db.mongodb.port>27017</pom.db.mongodb.port>

				<!-- Office converter -->
				<pom.converter.word2html>/idocv/converter/word2html.exe</pom.converter.word2html>
				<pom.converter.html2word>/idocv/converter/pandoc.exe</pom.converter.html2word>
				<pom.converter.word2pdf>/idocv/converter/word2pdf.exe</pom.converter.word2pdf>
				<pom.converter.excel2html>/idocv/converter/excel2html.exe</pom.converter.excel2html>
				<pom.converter.excel2pdf>/idocv/converter/excel2pdf.exe</pom.converter.excel2pdf>
				<pom.converter.ppt2jpg>/idocv/converter/ppt2jpg.exe</pom.converter.ppt2jpg>
				<pom.converter.pdf2img>/idocv/converter/pdf2img/gswin64c.exe</pom.converter.pdf2img>
				<pom.converter.pdf2html>/idocv/converter/pdf2html/pdf2htmlEX.exe</pom.converter.pdf2html>
				<pom.converter.img2jpg>C:/Program Files/ImageMagick-6.9.0-Q8/convert.exe</pom.converter.img2jpg>
				<pom.converter.audio2mp3>/idocv/converter/ffmpeg.exe</pom.converter.audio2mp3>
				<pom.converter.zip2file>/idocv/converter/zip2file/7z.exe</pom.converter.zip2file>
				<pom.converter.cad2img>/idocv/converter/cad2img/di.exe</pom.converter.cad2img>
			</properties>
		</profile>

		<!-- user. run with: clean install -Puser -->
		<profile>
			<id>user</id>
			<properties>
				<!-- Data -->
				<pom.data.url>http://127.0.0.1/data/</pom.data.url>
				<pom.data.dir>/idocv/data/</pom.data.dir>
				<pom.view.page.draw.server>http://draw.idocv.com:8997</pom.view.page.draw.server>

				<!-- Restriction -->
				<pom.filetype.upload>doc,docx,xls,xlsx,ppt,pptx,pdf,txt</pom.filetype.upload>
				<pom.filetype.view>doc,docx,xls,xlsx,ppt,pptx,pdf,txt</pom.filetype.view>
				<pom.upload.max.size>20000000</pom.upload.max.size>
				<pom.upload.max.msg>\u9ed8\u8ba4\u652f\u630120M\u4ee5\u5185\u7684\u6587\u6863\u9884\u89c8\uff0c\u8be6\u60c5\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458\uff01</pom.upload.max.msg>

				<!-- Database -->
				<pom.db.mongodb.ip>localhost</pom.db.mongodb.ip>
				<pom.db.mongodb.port>27017</pom.db.mongodb.port>

				<!-- Office converter -->
				<pom.converter.word2html>/idocv/converter/word2html.exe</pom.converter.word2html>
				<pom.converter.html2word>/idocv/converter/pandoc.exe</pom.converter.html2word>
				<pom.converter.word2pdf>/idocv/converter/word2pdf.exe</pom.converter.word2pdf>
				<pom.converter.excel2html>/idocv/converter/excel2html.exe</pom.converter.excel2html>
				<pom.converter.excel2pdf>/idocv/converter/excel2pdf.exe</pom.converter.excel2pdf>
				<pom.converter.ppt2jpg>/idocv/converter/ppt2jpg.exe</pom.converter.ppt2jpg>
				<pom.converter.pdf2img>/idocv/converter/pdf2img/gswin64c.exe</pom.converter.pdf2img>
				<pom.converter.pdf2html>/idocv/converter/pdf2html/pdf2htmlEX.exe</pom.converter.pdf2html>
				<pom.converter.img2jpg>C:/Program Files/ImageMagick-6.9.0-Q8/convert.exe</pom.converter.img2jpg>
				<pom.converter.audio2mp3>/idocv/converter/ffmpeg.exe</pom.converter.audio2mp3>
				<pom.converter.zip2file>/idocv/converter/zip2file/7z.exe</pom.converter.zip2file>
				<pom.converter.cad2img>/idocv/converter/cad2img/di.exe</pom.converter.cad2img>
			</properties>
		</profile>

		<!-- user professional. run with: clean install -Puserpro -->
		<profile>
			<id>userpro</id>
			<properties>
				<!-- Data -->
				<pom.data.url>http://127.0.0.1/data/</pom.data.url>
				<pom.data.dir>/idocv/data/</pom.data.dir>
				<pom.view.page.draw.server>http://draw.idocv.com:8997</pom.view.page.draw.server>

				<!-- Restriction -->
				<pom.filetype.upload>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z</pom.filetype.upload>
				<pom.filetype.view>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z</pom.filetype.view>
				<pom.upload.max.size>20000000</pom.upload.max.size>
				<pom.upload.max.msg>\u9ed8\u8ba4\u652f\u630120M\u4ee5\u5185\u7684\u6587\u6863\u9884\u89c8\uff0c\u8be6\u60c5\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458\uff01</pom.upload.max.msg>

				<!-- Database -->
				<pom.db.mongodb.ip>localhost</pom.db.mongodb.ip>
				<pom.db.mongodb.port>27017</pom.db.mongodb.port>

				<!-- Office converter -->
				<pom.converter.word2html>/idocv/converter/word2html.exe</pom.converter.word2html>
				<pom.converter.html2word>/idocv/converter/pandoc.exe</pom.converter.html2word>
				<pom.converter.word2pdf>/idocv/converter/word2pdf.exe</pom.converter.word2pdf>
				<pom.converter.excel2html>/idocv/converter/excel2html.exe</pom.converter.excel2html>
				<pom.converter.excel2pdf>/idocv/converter/excel2pdf.exe</pom.converter.excel2pdf>
				<pom.converter.ppt2jpg>/idocv/converter/ppt2jpg.exe</pom.converter.ppt2jpg>
				<pom.converter.pdf2img>/idocv/converter/pdf2img/gswin64c.exe</pom.converter.pdf2img>
				<pom.converter.pdf2html>/idocv/converter/pdf2html/pdf2htmlEX.exe</pom.converter.pdf2html>
				<pom.converter.img2jpg>C:/Program Files/ImageMagick-6.9.0-Q8/convert.exe</pom.converter.img2jpg>
				<pom.converter.audio2mp3>/idocv/converter/ffmpeg.exe</pom.converter.audio2mp3>
				<pom.converter.zip2file>/idocv/converter/zip2file/7z.exe</pom.converter.zip2file>
				<pom.converter.cad2img>/idocv/converter/cad2img/di.exe</pom.converter.cad2img>
			</properties>
		</profile>

		<!-- Production -->
		<profile>
			<id>prod</id>
			<properties>
				<!-- Data -->
				<pom.data.url>http://data.idocv.com/</pom.data.url>
				<pom.data.dir>/idocv/data/</pom.data.dir>
				<pom.view.page.draw.server>http://draw.idocv.com:8997</pom.view.page.draw.server>

				<!-- Restriction -->
				<pom.filetype.upload>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z,dwg,dxf,dwf</pom.filetype.upload>
				<pom.filetype.view>doc,docx,xls,xlsx,ppt,pptx,pdf,txt,jpg,gif,png,bmp,tif,mp3,m4a,midi,wma,zip,rar,tar,7z,dwg,dxf,dwf</pom.filetype.view>
				<pom.upload.max.size>1000000</pom.upload.max.size>
				<pom.upload.max.msg>\u514d\u8d39\u7248\u53ea\u652f\u63011M\u4ee5\u5185\u6587\u4ef6\u9884\u89c8\uff0c\u8be6\u60c5\u54a8\u8be2\uff1a400-000-7644</pom.upload.max.msg>

				<!-- Database -->
				<pom.db.mongodb.ip>localhost</pom.db.mongodb.ip>
				<pom.db.mongodb.port>27017</pom.db.mongodb.port>

				<!-- Office converter -->
				<pom.converter.word2html>/idocv/converter/word2html.exe</pom.converter.word2html>
				<pom.converter.html2word>/idocv/converter/pandoc.exe</pom.converter.html2word>
				<pom.converter.word2pdf>/idocv/converter/word2pdf.exe</pom.converter.word2pdf>
				<pom.converter.excel2html>/idocv/converter/excel2html.exe</pom.converter.excel2html>
				<pom.converter.excel2pdf>/idocv/converter/excel2pdf.exe</pom.converter.excel2pdf>
				<pom.converter.ppt2jpg>/idocv/converter/ppt2jpg.exe</pom.converter.ppt2jpg>
				<pom.converter.pdf2img>/idocv/converter/pdf2img/gswin64c.exe</pom.converter.pdf2img>
				<pom.converter.pdf2html>/idocv/converter/pdf2html/pdf2htmlEX.exe</pom.converter.pdf2html>
				<pom.converter.img2jpg>C:/Program Files/ImageMagick-6.9.0-Q8/convert.exe</pom.converter.img2jpg>
				<pom.converter.audio2mp3>/idocv/converter/ffmpeg.exe</pom.converter.audio2mp3>
				<pom.converter.zip2file>/idocv/converter/zip2file/7z.exe</pom.converter.zip2file>
				<pom.converter.cad2img>/idocv/converter/cad2img/di.exe</pom.converter.cad2img>
			</properties>
		</profile>
	</profiles>
</project>